improving unit tests for filesystem module